--- a/templates/statefulset/onlyoffice-api.yaml
+++ b/templates/statefulset/onlyoffice-api.yaml
@@ -17,18 +17,14 @@ spec:
     metadata:
       labels:
         app: onlyoffice-api
+      {{- if .Values.podAnnotations }}
+      annotations:
+        {{- range $key, $value := .Values.podAnnotations }}
+        {{ $key }}: {{ tpl $value $ }}
+        {{- end }}
+      {{- end }}
     spec:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values:
-                    - onlyoffice-api
-              topologyKey: "kubernetes.io/hostname"
-    # {{ if .Values.securityContext.enabled }}
+     {{ if .Values.securityContext.enabled }}
       securityContext:
         runAsUser: {{ .Values.securityContext.runAsUser }}
         runAsGroup: {{ .Values.securityContext.runAsGroup }}
