--- a/templates/deployments/onlyoffice-people-server.yaml
+++ b/templates/deployments/onlyoffice-people-server.yaml
@@ -15,6 +15,12 @@ spec:
     metadata:
       labels:
         app: onlyoffice-people-server
+      {{- if .Values.podAnnotations }}
+      annotations:
+        {{- range $key, $value := .Values.podAnnotations }}
+        {{ $key }}: {{ tpl $value $ }}
+        {{- end }}
+      {{- end }}
     spec:
       {{ if .Values.securityContext.enabled }}
       securityContext:
@@ -91,15 +97,15 @@ spec:
         ports:
         - containerPort: {{ .Values.ports.appserver.http }}
           name: http
-    #    livenessProbe:
-    #      failureThreshold: 2
-    #      httpGet:
-    #        path: /
-    #        port: 5050
-    #      periodSeconds: 10
-    #      successThreshold: 1
-    #      timeoutSeconds: 5
-    #      initialDelaySeconds: 45
+        {{ if .Values.readinessProbeEnabled }}
+        readinessProbe: {{ toYaml .Values.readinessProbe | nindent 10 }}
+        {{ end }}
+        {{ if .Values.livenessProbeEnabled }}
+        livenessProbe: {{ toYaml .Values.livenessProbe | nindent 10 }}
+        {{ end }}
+        {{ if .Values.startupProbeEnabled }}
+        startupProbe: {{ toYaml .Values.startupProbe | nindent 10 }}
+        {{ end }}
     #    securityContext:
     #      allowPrivilegeEscalation: false
         volumeMounts:
