--- a/templates/services/onlyoffice-api-system.yaml
+++ b/templates/services/onlyoffice-api-system.yaml
@@ -8,7 +8,7 @@ spec:
   ports:
   - port: 5050
     name: http
-    targetPort: 5050
+    targetPort: {{ .Values.ports.appserver.http }}
   selector:
     statefulset.kubernetes.io/pod-name: onlyoffice-api-system-0
   type: ClusterIP
