--- a/templates/services/onlyoffice-proxy.yaml
+++ b/templates/services/onlyoffice-proxy.yaml
@@ -6,7 +6,7 @@ spec:
   ports:
   - port: 5050
     name: http
-    targetPort: 5050
+    targetPort: {{ .Values.ports.appserver.http }}
   - port: 8081
     name: url
     targetPort: 8081
