--- a/templates/services/onlyoffice-ssoauth.yaml
+++ b/templates/services/onlyoffice-ssoauth.yaml
@@ -8,10 +8,10 @@ spec:
   ports:
   - port: 5050
     name: http
-    targetPort: 5050
+    targetPort: {{ .Values.ports.appserver.http }}
   - port: 9834
     name: sso
-    targetPort: 9834
+    targetPort: {{ .Values.ports.sso }}
   selector:
     statefulset.kubernetes.io/pod-name: onlyoffice-ssoauth-0
   type: ClusterIP
