--- a/templates/statefulset/onlyoffice-api-system.yaml
+++ b/templates/statefulset/onlyoffice-api-system.yaml
@@ -17,17 +17,13 @@ spec:
     metadata:
       labels:
         app: onlyoffice-api-system
+      {{- if .Values.podAnnotations }}
+      annotations:
+        {{- range $key, $value := .Values.podAnnotations }}
+        {{ $key }}: {{ tpl $value $ }}
+        {{- end }}
+      {{- end }}
     spec:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values:
-                    - onlyoffice-api-system
-              topologyKey: "kubernetes.io/hostname"
       {{ if .Values.securityContext.enabled }}
       securityContext:
         runAsUser: {{ .Values.securityContext.runAsUser }}
@@ -102,7 +98,7 @@ spec:
     #      failureThreshold: 2
     #      httpGet:
     #        path: /
-    #        port: 5050
+    #        port: {{ .Values.ports.appserver.http }}
     #      periodSeconds: 10
     #      successThreshold: 1
     #      timeoutSeconds: 5
