--- a/templates/statefulset/onlyoffice-telegram-service.yaml
+++ b/templates/statefulset/onlyoffice-telegram-service.yaml
@@ -17,17 +17,13 @@ spec:
     metadata:
       labels:
         app: onlyoffice-telegram-service
+      {{- if .Values.podAnnotations }}
+      annotations:
+        {{- range $key, $value := .Values.podAnnotations }}
+        {{ $key }}: {{ tpl $value $ }}
+        {{- end }}
+      {{- end }}
     spec:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values:
-                    - onlyoffice-telegram-service
-              topologyKey: "kubernetes.io/hostname"
       {{ if .Values.securityContext.enabled }}
       securityContext:
         runAsUser: {{ .Values.securityContext.runAsUser }}
