Change antiaffinity, probe, securitycontext

--- a/templates/statefulset/onlyoffice-api.yaml
+++ b/templates/statefulset/onlyoffice-api.yaml
@@ -24,11 +24,9 @@ spec:
         {{- end }}
       {{- end }}
     spec:
-     {{ if .Values.securityContext.enabled }}
-      securityContext:
-        runAsUser: {{ .Values.securityContext.runAsUser }}
-        runAsGroup: {{ .Values.securityContext.runAsGroup }}
-      {{ end }}
+      {{- if .Values.podSecurityContext.enabled }}
+      securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
+      {{- end }}
       imagePullSecrets:
       - name: myregistrykey
       initContainers:
@@ -76,15 +74,15 @@ spec:
         ports:
         - containerPort: {{ .Values.ports.appserver.http }}
           name: http
-    #    livenessProbe:
-    #      failureThreshold: 2
-    #      httpGet:
-    #        path: /
-    #        port: 5050
-    #      periodSeconds: 10
-    #      successThreshold: 1
-    #      timeoutSeconds: 5
-    #      initialDelaySeconds: 45
+        {{ if .Values.readinessProbeEnabled }}
+        readinessProbe: {{- omit .Values.readinessProbe "enabled" | toYaml | nindent 10 }}
+        {{ end }}
+        {{ if .Values.livenessProbeEnabled }}
+        livenessProbe: {{- omit .Values.livenessProbe "enabled" | toYaml | nindent 10 }}
+        {{ end }}
+        {{ if .Values.startupProbeEnabled }}
+        startupProbe: {{- omit .Values.startupProbe "enabled" | toYaml | nindent 10 }}
+        {{ end }}
     #    securityContext:
     #      allowPrivilegeEscalation: false
         volumeMounts:
