--- a/templates/deployments/onlyoffice-calendar.yaml
+++ b/templates/deployments/onlyoffice-calendar.yaml
@@ -10,8 +10,9 @@ spec:
   selector:
     matchLabels:
       app: onlyoffice-calendar
-  strategy:
-    type: RollingUpdate
+  {{- if .Values.updateStrategy }}
+  strategy: {{ template "appserver.update.strategyType" . }}
+  {{- end }}
   template:
     metadata:
       labels:
@@ -25,7 +26,7 @@ spec:
     spec:
       affinity:
         podAntiAffinity:
-        {{- if eq .Values.antiAffinity.type "soft" }}
+        {{- if eq .Values.podAntiAffinity.type "soft" }}
           preferredDuringSchedulingIgnoredDuringExecution:
           - podAffinityTerm:
               labelSelector:
@@ -34,9 +35,9 @@ spec:
                   operator: In
                   values:
                   - onlyoffice-calendar
-              topologyKey: {{ .Values.antiAffinity.topologyKey }}
-            weight: {{ .Values.antiAffinity.weight }}
-        {{- else if eq .Values.antiAffinity.type "hard" }}
+              topologyKey: {{ .Values.podAntiAffinity.topologyKey }}
+            weight: {{ .Values.podAntiAffinity.weight }}
+        {{- else if eq .Values.podAntiAffinity.type "hard" }}
           requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
               matchExpressions:
@@ -44,13 +45,11 @@ spec:
                 operator: In
                 values:
                 - onlyoffice-calendar
-            topologyKey: {{ .Values.antiAffinity.topologyKey }}
+            topologyKey: {{ .Values.podAntiAffinity.topologyKey }}
         {{- end }}
-      {{ if .Values.securityContext.enabled }}
-      securityContext:
-        runAsUser: {{ .Values.securityContext.runAsUser }}
-        runAsGroup: {{ .Values.securityContext.runAsGroup }}
-      {{ end }}
+      {{- if .Values.podSecurityContext.enabled }}
+      securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
+      {{- end }}
       imagePullSecrets:
       - name: myregistrykey
       initContainers:
@@ -99,13 +98,13 @@ spec:
         - containerPort: {{ .Values.ports.appserver.http }}
           name: http
         {{ if .Values.readinessProbeEnabled }}
-        readinessProbe: {{ toYaml .Values.readinessProbe | nindent 10 }}
+        readinessProbe: {{- omit .Values.readinessProbe "enabled" | toYaml | nindent 10 }}
         {{ end }}
         {{ if .Values.livenessProbeEnabled }}
-        livenessProbe: {{ toYaml .Values.livenessProbe | nindent 10 }}
+        livenessProbe: {{- omit .Values.livenessProbe "enabled" | toYaml | nindent 10 }}
         {{ end }}
         {{ if .Values.startupProbeEnabled }}
-        startupProbe: {{ toYaml .Values.startupProbe | nindent 10 }}
+        startupProbe: {{- omit .Values.startupProbe "enabled" | toYaml | nindent 10 }}
         {{ end }}
     #    securityContext:
     #      allowPrivilegeEscalation: false
