--- a/templates/deployments/onlyoffice-calendar.yaml
+++ b/templates/deployments/onlyoffice-calendar.yaml
@@ -50,6 +50,12 @@ spec:
       {{- if .Values.podSecurityContext.enabled }}
       securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
+      {{- if .Values.nodeSelector }}
+      nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations: {{ toYaml .Values.tolerations | nindent 8 }}
+      {{- end }} 
       imagePullSecrets:
       - name: myregistrykey
       initContainers:
