--- a/templates/deployments/onlyoffice-crm.yaml
+++ b/templates/deployments/onlyoffice-crm.yaml
@@ -50,6 +50,12 @@ spec:
                 - onlyoffice-crm
             topologyKey: {{ .Values.podAntiAffinity.topologyKey }}
         {{- end }}
+      {{- if .Values.nodeSelector }}
+      nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations: {{ toYaml .Values.tolerations | nindent 8 }}
+      {{- end }} 
       imagePullSecrets:
       - name: myregistrykey
       initContainers:
