--- a/templates/deployments/onlyoffice-people-server.yaml
+++ b/templates/deployments/onlyoffice-people-server.yaml
@@ -49,6 +49,12 @@ spec:
                 - onlyoffice-people-server
             topologyKey: {{ .Values.podAntiAffinity.topologyKey }}
         {{- end }}
+      {{- if .Values.nodeSelector }}
+      nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations: {{ toYaml .Values.tolerations | nindent 8 }}
+      {{- end }} 
       imagePullSecrets:
       - name: myregistrykey
       initContainers:
