--- a/templates/statefulset/onlyoffice-api-system.yaml
+++ b/templates/statefulset/onlyoffice-api-system.yaml
@@ -11,7 +11,7 @@ spec:
   serviceName: onlyoffice-api-system
   replicas: 1
   updateStrategy:
-    type: RollingUpdate
+    type: {{ .Values.statefulsetUpdateStrategy.type }}
   podManagementPolicy: OrderedReady
   template:
     metadata:
@@ -27,8 +27,10 @@ spec:
       {{- if .Values.podSecurityContext.enabled }}
       securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
+      {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
-      - name: myregistrykey
+      - name: {{ .Values.imagePullSecrets }}
+      {{- end }}
       initContainers:
       - name: appserver-init-storage
         image: {{ .Values.images.initContainer.initStorage }}:{{ .Values.images.tag }}
@@ -90,7 +92,7 @@ spec:
         - secretRef:
             name: jwt
         ports:
-        - containerPort: {{ .Values.ports.appserver.http }}
+        - containerPort: {{ .Values.containerPorts.appserver.http }}
           name: http
         {{ if .Values.readinessProbeEnabled }}
         readinessProbe: {{- omit .Values.readinessProbe "enabled" | toYaml | nindent 10 }}
@@ -101,8 +103,9 @@ spec:
         {{ if .Values.startupProbeEnabled }}
         startupProbe: {{- omit .Values.startupProbe "enabled" | toYaml | nindent 10 }}
         {{ end }}
-    #    securityContext:
-    #      allowPrivilegeEscalation: false
+        {{- if .Values.podSecurityContext.enabled }}
+        securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 10 }}
+        {{- end }}
         volumeMounts:
         - name: app-data
           mountPath: /app/onlyoffice/data
