--- a/values.yaml
+++ b/values.yaml
@@ -7,6 +7,11 @@ connections:
   mysqlHost: "mysql"
   mysqlDatabase: "onlyoffice"
   mysqlUser: "onlyoffice_user"
+  mysqlPassword: ""
+  mysqlRootPassword: ""
+  mysqlExistingSecret: "mysql"
+  musqlSecretKeyPassword: "mysql-password"
+  musqlSecretKeyRootPassword: "mysql-root-password"
   appDotnetEnv: "test"
   appCoreBaseDomain: "localhost"
   appCoreMachinekey: "your_core_machinekey"
