--- a/templates/deployments/onlyoffice-mail.yaml
+++ b/templates/deployments/onlyoffice-mail.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: onlyoffice-mail
 spec:
-  replicas: 2
+  replicas: {{ .Values.onlyofficeMail.replicaCount }}
   selector:
     matchLabels:
       app: onlyoffice-mail
