--- a/templates/deployments/onlyoffice-calendar.yaml
+++ b/templates/deployments/onlyoffice-calendar.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: onlyoffice-calendar
 spec:
-  replicas: 2
+  replicas: {{ .Values.onlyofficeCalendar.replicaCount }}
   selector:
     matchLabels:
       app: onlyoffice-calendar
