--- a/templates/deployments/onlyoffice-crm.yaml
+++ b/templates/deployments/onlyoffice-crm.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: onlyoffice-crm
 spec:
-  replicas: 2
+  replicas: {{ .Values.onlyofficeCrm.replicaCount }}
   selector:
     matchLabels:
       app: onlyoffice-crm
