--- a/templates/deployments/onlyoffice-projects-server.yaml
+++ b/templates/deployments/onlyoffice-projects-server.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: onlyoffice-projects-server
 spec:
-  replicas: 2
+  replicas: {{ .Values.onlyofficeProjectServer.replicaCount }}
   selector:
     matchLabels:
       app: onlyoffice-projects-server
