--- a/templates/deployments/onlyoffice-proxy.yaml
+++ b/templates/deployments/onlyoffice-proxy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: onlyoffice-proxy
 spec:
-  replicas: 2
+  replicas: {{ .Values.onlyofficeProxy.replicaCount }}
   selector:
     matchLabels:
       app: onlyoffice-proxy
