--- a/templates/secrets/mysql.yaml
+++ b/templates/secrets/mysql.yaml
@@ -5,6 +5,6 @@ metadata:
   name: {{ .Release.Name }}-mysql
 type: Opaque
 stringData:
-  {{ .Values.connections.musqlSecretKeyPassword }}: {{ include "appserver.mysql.password" . | quote }}
-  {{ .Values.connections.musqlSecretKeyRootPassword }}: {{ include "appserver.mysql.rootPassword" . | quote }}
+  {{ .Values.connections.mysqlSecretKeyPassword }}: {{ include "appserver.mysql.password" . | quote }}
+  {{ .Values.connections.mysqlSecretKeyRootPassword }}: {{ include "appserver.mysql.rootPassword" . | quote }}
 {{- end }}
