--- a/values.yaml
+++ b/values.yaml
@@ -10,8 +10,8 @@ connections:
   mysqlPassword: ""
   mysqlRootPassword: ""
   mysqlExistingSecret: "mysql"
-  musqlSecretKeyPassword: "mysql-password"
-  musqlSecretKeyRootPassword: "mysql-root-password"
+  mysqlSecretKeyPassword: "mysql-password"
+  mysqlSecretKeyRootPassword: "mysql-root-password"
   appDotnetEnv: "test"
   appCoreBaseDomain: "localhost"
   appCoreMachinekey: "your_core_machinekey"
@@ -35,7 +35,7 @@ connections:
   projektsServerHost: "onlyoffice-projects-server"
   urlshortenerHost: "onlyoffice-urlshortener"
   studioNotifyHost: "onlyoffice-studio-notify"
-  sockerHost: "onlyoffice-socket"
+  socketHost: "onlyoffice-socket"
   telegramServiceHost: "onlyoffice-telegram-service"
   peopleServerHost: "onlyoffice-people-server"
   filesHost: "onlyoffice-files"
