--- a/templates/secrets/jwt.yaml
+++ b/templates/secrets/jwt.yaml
@@ -8,3 +8,4 @@ stringData:
   JWT_ENABLED: {{ .Values.jwt.enabled | quote }}
   JWT_SECRET: {{ .Values.jwt.secret | quote }}
   JWT_HEADER: {{ .Values.jwt.header | quote }}
+  JWT_IN_BODY: {{ .Values.jwt.inBody | quote }}
