--- a/templates/ingresses/appserver.yaml
+++ b/templates/ingresses/appserver.yaml
@@ -1,18 +1,27 @@
-{{ if .Values.ingress.enabled }}
+{{- if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-appserver
+  {{- if .Values.ingress.annotations }}
   annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/proxy-body-size: 100m
+    {{- range $key, $value := .Values.ingress.annotations }}
+    {{ $key }}: {{ tpl $value $ }}
+    {{- end }}
+  {{- end }}
 spec:
+  {{- if .Values.ingress.tls.enabled }}
+  tls:
+  - hosts:
+    - {{ .Values.ingress.host }}
+    secretName: {{ .Values.ingress.tls.secretName }}
+  {{- end }}
   rules:
-  {{ if .Values.ingress.host }}
+  {{- if .Values.ingress.host }}
   - host: {{ .Values.ingress.host }}
-  {{ else }}
+  {{- else }}
   - host:
-  {{ end }}
+  {{- end }}
     http:
       paths:
       - path: /
@@ -21,5 +30,5 @@ spec:
           service:
             name: onlyoffice-proxy
             port:
-              number: 8092
-{{ end }}
+              number: {{ .Values.containerPorts.proxy.external }}
+{{- end }}
