--- a/templates/pvc/files-data.yaml
+++ b/templates/pvc/files-data.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: files-data
 spec:
-  storageClassName: {{ .Values.persistence.filesData.storageClass }}
+  storageClassName: {{ .Values.persistence.storageClass }}
   accessModes:
   - ReadWriteMany
   resources:
